Aluno.yml preenchido

--- a/ALUNO.yml
+++ b/ALUNO.yml
@@ -1,4 +1,4 @@
-nome:
-email:
-user github:
-user insper:
+nome: Ricardo Ribeiro Rodrigues
+email: ricardorr7@al.insper.edu.br
+user github: RicardoRibeiroRodrigues
+user insper: ricardorr7
